--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ReactNativeExpo",
-    "slug": "ReactNativeExpo",
+    "name": "Orgs",
+    "slug": "orgs-cesta",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
